try to fix font on mobile safari

--- a/_scss/main.scss
+++ b/_scss/main.scss
@@ -5,7 +5,7 @@
   width: 100%;
 }
 body {
-  font-family: monospace;
+  font-family: --apple-system-mono, monospace;
   font-size: 16px;
   background-color: whitesmoke;
   color: #333;
